# wrum

./: Cargo.toml  LICENSE
cli/: Cargo.toml
cli/src/: editors.rs  install.rs  install_modules.rs  install_path.rs  main.rs  project.rs
cli/src/system/: mod.rs
cli/src/system/os/: linux.rs  macos.rs  windows.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/editors/: info.rs  mod.rs
lib/src/install/: download.rs  mod.rs  unpack.rs
lib/src/license/: mod.rs
lib/src/live_api/: mod.rs
lib/src/live_api/graphql/: major_release_list.graphql  release_info.graphql  schema.graphql
lib/src/modules/: info.rs  mod.rs
lib/src/projects/: mod.rs
lib/src/system_info/: mod.rs
lib/src/system_info/os/: linux.rs  macos.rs  windows.rs
lib/src/workarounds/: mod.rs
